v1.5 - ?
* refactored storage subsystem in preparation for home invite feature
* coded full YAML backend on new storage subsystem; storage id 2 for individual YAML files per object (home/spawn/player) or 3 for a large single data file
* Ticket #28: home invite feature enhancement

v1.4.4 - ?
* fixed WorldGuard compatibility to work with newest WorldGuard 5.5 changes
* added Dutch translation; locale nl (thanks @Dunncann!)

v1.4.3 - March 4, 2012
* fixed a reported bug with new installations throwing DB version upgrade errors
* saved an extra permission check on block place when using 'bedsethome'.
Thanks to @Chrisjon for reporting the issue.
* Ticket #73: HSP throws NPE if World doesn't exist (R6 issue)
* Ticket #74: issue with first spawn when using Bukkit world-container setting, issue fixed for all strategies

v1.4.2 - February 23, 2012
=== <<color green>>v1.4.2 - February 23, 2012<</color>> ===
* This release is compatible with R5 (the new Bukkit event system)
* Ticket #69: Fix Russian encoding (again)
* Fix for WorldEdit error message printed on startup with latest release
versions of WorldEdit (5.2, 5.3 in the future)

v1.4.1 - February 15, 2012
* fixed a bug related to bed homes when using MODE_HOME_BED_ONLY, which
resulted in the bed homes not being used at all
* converted persistence engine to "Bukkit Persistance Reimplemented"
http://goo.gl/c9WjB - the main effect here is that HSP is now friendly to live
reloading using plugins such as PluginReloader, thus it can be live-reloaded
for upgrades or plugin testing (mostly helps me as the developer)
* Ticket #70: first spawn not working correctly
* Ticket #69: Russian encoding wrong (hopefully fixed, need confirmation)

v1.4 - February 10, 2012
* added German locale (de) - thanks Jobsti!
* added Russian locale (ru) - thanks MSTrus!
* "core.newPlayerStrategy" option added and default is changed to BUKKIT which
uses Bukkits Player.hasPlayedBefore() API call. If you have issues with