@@ -101,5 +101,5 @@ public enum HSPMessages {
 	GENERIC_ERROR,
 	NO_HOME_INVITE_FOUND,
 	
-	CMDHELP_HOME_INVITE,
+	CMD_SETMAPSPAWN_SET_SUCCESS,
 }
