@@ -90,3 +90,4 @@ GENERIC_WORLD_DEFAULT=world default
 GENERIC_ERROR=%red%A system error was encountered, please contact your administrator.
 NO_HOME_INVITE_FOUND=No home invite found.
 
+CMD_SETMAPSPAWN_SET_SUCCESS=You have successfully changed map spawn on %world% to %location%.
