@@ -2,6 +2,9 @@ v1.5 - ?
 * refactored storage subsystem in preparation for home invite feature
 * coded full YAML backend on new storage subsystem; storage id 2 for individual YAML files per object (home/spawn/player) or 3 for a large single data file
 * Ticket #28: home invite feature enhancement
+* Ticket #77: show MC spawn (use /spawnlist -m)
+* added /setmapspawn for changing a map's spawn point (not really useful for
+HSP in any way, just a general utility command)
 
 v1.4.4 - ?
 * fixed WorldGuard compatibility to work with newest WorldGuard 5.5 changes
